--- a/src/Component/TodoItem.css
+++ b/src/Component/TodoItem.css
@@ -4,12 +4,13 @@
     font-size: 24px;
     color: #4d4d4d;
     border: 2px solid black;
-    padding: 10px
+    padding: 10px;
 }
 
 .TodoItem-complete {
     text-decoration: line-through;
     opacity: .3;
+    border: 1px solid black;
 }
 
 .TodoItem > img {
